# .new.bak

./: .editorconfig  .pre-commit-config.yaml  .travis.yml  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
newbak/: __main__.py
