[tool.poetry]
name = "newbak"
version = "1.1.0"
description = ".new and .bak file management"
authors = ["Spenser Black"]

[tool.poetry.dependencies]
python = "^3.6.2"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.1"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"

[tool.isort]
profile = "black"
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
